Project

General

Profile

Actions

Bug #12417

closed

warning: "isfinite" redefined when compiling bigdecimal.c on cygwin

Bug #12417: warning: "isfinite" redefined when compiling bigdecimal.c on cygwin

Added by duerst (Martin Dürst) over 10 years ago. Updated over 10 years ago.

Status:
Closed
Target version:
-
ruby -v:
ruby 2.4.0dev (2016-05-23 trunk 55132) [x86_64-cygwin]
[ruby-core:75691]

Description

When using make up; make install-nodoc, I get the following warning:

compiling bigdecimal.c
bigdecimal.c:34:0: warning: "isfinite" redefined
 # define isfinite(x) finite(x)
 ^
In file included from ../.././include/ruby/missing.h:23:0,
                 from ../.././include/ruby/defines.h:125,
                 from ../.././include/ruby/ruby.h:36,
                 from bigdecimal.h:12,
                 from bigdecimal.c:13:
/usr/include/math.h:238:0: note: this is the location of the previous definition
     #define isfinite(__x) (__builtin_isfinite (__x))
 ^
cc1: warning: unrecognized command line option ‘-Wno-self-assign’
cc1: warning: unrecognized command line option ‘-Wno-constant-logical-operand’
cc1: warning: unrecognized command line option ‘-Wno-parentheses-equality’
cc1: warning: unrecognized command line option ‘-Wno-tautological-compare’
linking shared-object bigdecimal.so

Related issues 1 (0 open — 1 closed)

Related to Ruby - Bug #12414: FloatDomainError in infinite Range#include? for certain BigDecimalsClosedActions
Actions

Also available in: PDF Atom