* ext/bigdecimal/bigdecimal.c (isfinite): get rid of a warning on   cygwin. [Bug #12417][ruby-core:75691]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@55133 b2dd03c8-39d4-4d8f-98ff-823fe69b080e