ext/bigdecimal/bigdecimal.c
@@ -30,7 +30,7 @@
 #include <ieeefp.h>
 #endif
 
-#if !defined(HAVE_ISFINITE) && defined(HAVE_FINITE)
+#if !defined(HAVE_ISFINITE) && defined(HAVE_FINITE) && !defined(isfinite)
 # define isfinite(x) finite(x)
 #endif
 
